[tool.poetry]
name = "allokate"
version = "0.1.0"
description = ""
authors = ["Johannes Roos <jhnnsrs@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "allokate" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "<2"
psutil = "^5.9.8"
xmltodict = "^0.13.0"
semver = "^3.0.2"


[tool.poetry.group.dev.dependencies]
docker = "^7.0.0"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
